--- a/Todo02/Base.lproj/Main.storyboard
+++ b/Todo02/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Edit" id="QR2-JY-VNQ">
-                                        <barButtonItem key="leftBarButtonItem" title="back" id="n71-Dy-1wF">
+                                        <barButtonItem key="leftBarButtonItem" title="back" style="done" id="n71-Dy-1wF">
                                             <connections>
                                                 <segue destination="BYZ-38-t0r" kind="show" id="sWm-lO-vtn"/>
                                             </connections>
@@ -82,6 +82,9 @@
                                 <rect key="frame" x="189" y="367" width="37" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Enter"/>
+                                <connections>
+                                    <action selector="Enter:" destination="pPK-an-OKC" eventType="touchUpInside" id="S0N-Kh-kXx"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oKu-iS-8Lw">
                                 <rect key="frame" x="76" y="278" width="263" height="34"/>
@@ -94,6 +97,10 @@
                         <viewLayoutGuide key="safeArea" id="5U1-Y2-xXY"/>
                     </view>
                     <navigationItem key="navigationItem" id="EE6-Pe-ArC"/>
+                    <connections>
+                        <outlet property="Enter" destination="lN2-gJ-fm7" id="Ipu-U0-g3u"/>
+                        <outlet property="TodoText" destination="oKu-iS-8Lw" id="NDc-p0-q18"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RWa-tp-npk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
